--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       backdrop-filter: blur(8px);
       max-width: 400px;
       animation: fadeIn 2s ease;
+      z-index: 2;
     }
 
     h1 {
@@ -53,11 +54,13 @@
       to { transform: scale(1); opacity: 1; }
     }
 
+    /* CORAZONES FLOTANDO */
     .heart {
       position: absolute;
       color: rgba(255,255,255,0.8);
       font-size: 20px;
       animation: float 6s linear infinite;
+      z-index: 1;
     }
 
     @keyframes float {
@@ -69,6 +72,55 @@
         transform: translateY(-10vh) scale(1.5);
         opacity: 0;
       }
+    }
+
+    /* BOTÓN */
+    .boton-amor {
+      margin-top: 20px;
+      padding: 12px 24px;
+      border: none;
+      border-radius: 30px;
+      background: #ff4d6d;
+      color: white;
+      font-size: 16px;
+      cursor: pointer;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+      animation: latido 1.5s infinite;
+    }
+
+    .boton-amor:hover {
+      transform: scale(1.05);
+    }
+
+    @keyframes latido {
+      0% { transform: scale(1); }
+      50% { transform: scale(1.1); }
+      100% { transform: scale(1); }
+    }
+
+    /* OVERLAY CORAZÓN GIGANTE */
+    .overlay-amor {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0,0,0,0.6);
+      display: none;
+      align-items: center;
+      justify-content: center;
+      z-index: 999;
+    }
+
+    .corazon-gigante {
+      font-size: 130px;
+      animation: latido 1.2s infinite;
+    }
+
+    .corazon-gigante span {
+      display: block;
+      font-size: 38px;
+      margin-top: 10px;
     }
   </style>
 </head>
@@ -82,6 +134,18 @@
     <p>Que este nuevo año te regale sonrisas, paz</p>
     <p>y momentos tan lindos como tú 💕</p>
     <p style="margin-top:20px;">Con cariño ❤️</p>
+
+    <button class="boton-amor" onclick="mostrarAmor()">
+      Toca aquí 💕
+    </button>
+  </div>
+
+  <!-- CORAZÓN GIGANTE -->
+  <div class="overlay-amor" id="amor" onclick="cerrarAmor()">
+    <div class="corazon-gigante">
+      ❤️
+      <span>TE AMO</span>
+    </div>
   </div>
 
   <script>
@@ -101,7 +165,16 @@
     }
 
     setInterval(crearCorazon, 300);
+
+    function mostrarAmor() {
+      document.getElementById("amor").style.display = "flex";
+    }
+
+    function cerrarAmor() {
+      document.getElementById("amor").style.display = "none";
+    }
   </script>
 
 </body>
 </html>
+
